--- a/MOYIB.css
+++ b/MOYIB.css
@@ -1,7 +1,4 @@
 
-* {
-  box-sizing: inherit;
-}
 body {
   background-color: white;
   font-family: "Gill Sans", sans-serif;
@@ -87,4 +84,87 @@ hr {
   aside, article {
     width: 100%;
     height: auto;
+  }
+
+  /* STYLING FOR THE CONTACT FORM */
+
+  * {
+    box-sizing: border-box;
+  }
+
+  .contact {
+    text-align: center;
+    margin: 40px;
+    width: 500px;
+    font-family: Tahoma, Verdana, Segoe, sans-serif;
+  }
+
+  label {
+    margin-right: 40px;
+    margin-bottom: 20px;
+    display: inline-block;
+  }
+
+  input {
+    margin-right: 30px;
+    margin-bottom: 20px;
+    display: inline-block;
+    width: 50%;
+    padding: 5px;
+    border-radius: 4px;
+    border: 1px solid #1fab89;
+  }
+
+  .message textarea {
+    vertical-align: text-top;
+  }
+
+  textarea {
+    margin-left: 65px;
+    display: inline-block;
+    margin-bottom: 20px;
+    width: 235px;
+    height: 100px;
+    border-radius: 4px;
+    border: 1px solid #1fab89;
+  }
+
+  input[type="submit"] {
+    color: white;
+    background-color: #68c8a1;
+    padding: 5px;
+    width: 70px;
+    border: 1px solid white;
+    font-size: 15px;
+    cursor: pointer;
+  }
+
+  input[type="submit"]:hover {
+    background-color: #68c8d1;
+  }
+
+  .submit {
+    text-align: center;
+  }
+
+  fieldset {
+    padding: 30px;
+    border: 1px solid #1fab89;
+    background-image: url("https://cdn.pixabay.com/photo/2017/03/02/08/58/background-texture-2110724__340.jpg");
+    border-radius: 25px;
+    width: 500px;
+    height: 400px;
+  }
+
+  legend {
+    background: white;
+    padding 5px;
+    border: 1px solid #1fab89;
+    border-radius: 10px;
+    padding: 10px;
+  }
+
+
+  sup {
+    color: red;
   }
